# trad-charts

./: .gitignore  LICENSE  README.md  palette.json  pyproject.toml
d3/: package.json  tsconfig.json
d3/examples/: showcase.html
d3/src/: index.ts  theme.ts
d3/src/core/: CIBand.ts  ContextMenu.ts  DensityCompare.ts  DraggableCIBounds.ts  ForestPlot.ts  HintArea.ts  QuantileDots.ts  RidgeDotplot.ts  ThresholdLine.ts  Tooltip.ts
d3/src/types/: data.ts  events.ts  index.ts  options.ts
d3/src/utils/: editableLabel.ts  index.ts  kde.ts  plainEnglish.ts  quantiles.ts  validation.ts
docs/: index.html  trad-charts-d3.js  trad-charts-d3.js.map
examples/: showcase.py
src/trad_charts/: __init__.py  charts.py  theme.py
